workloads/flashchat-server/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: flashchat-server
  namespace: flashchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flashchat-server
  template:
    metadata:
      labels:
        app: flashchat-server
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: flashchat-server
        image: mcntrn/flashchat-server:8622e50
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 4000
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - >-
              curl -X POST http://localhost:4000/graphql -H 'Content-Type: application/json'
              -d '{\"test\": \"{ messages { _id } }\"}'
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - >-
              curl -X POST http://localhost:4000/graphql -H 'Content-Type: application/json'
              -d '{\"test\": \"{ messages { _id } }\"}'
          initialDelaySeconds: 15
          periodSeconds: 20
