workloads/flashchat-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flashchat-server
  namespace: flashchat
spec:
  ports:
  - port: 4000
    name: http
  selector:
    app: flashchat-server
