workloads/flashchat-server/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flashchat-server
  namespace: flashchat
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - mcntrn.com
    secretName: tls-secret
  rules:
  - host: mcntrn.com
    http:
      paths:
      - backend:
          serviceName: flashchat-server
          servicePort: 80
        path: /service(/|$)(.*)
